--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
-  background-color: rgb(133, 255, 255);
+  background-color: rgb(164, 164, 164);
   /* text-align: center; */
   font-family: helvetica;
 }
 
 .divider {
   background-color: rgb(255, 255, 255);
+  border-radius: 15px;
   margin: 3%;
-  /* position: relative; */
+  position: relative;
 }
 
 /* nav bar */
@@ -17,11 +18,13 @@ body {
   text-align: center;
   font-size: 3em;
   padding-top: 2%;
-  color: rgb(83, 219, 219);
+  color: rgb(255, 255, 255);
   font-weight: 200;
+  margin: auto;
 }
 
 nav {
+  margin: auto;
   text-align: center;
   padding-top: 1%;
 }
@@ -32,7 +35,7 @@ nav {
 
 a {
   text-decoration: none;
-  color: rgb(253, 153, 253);
+  color: rgb(255, 255, 255);
   font-size: 2em;
   font-weight: 600;
   padding-left: 5%;
@@ -41,7 +44,7 @@ a {
 /* main content */
 
 main {
-  color: rgb(67, 174, 175);
+  color: rgb(144, 144, 144);
   padding-top: 5%;
 }
 
@@ -51,7 +54,7 @@ main {
 }
 
 .websites h2 {
-  color: rgb(83, 219, 219);
+  color: rgb(100, 100, 100);
   text-align: center;
   font-size: 3em;
   margin: 0 0 1em;
@@ -78,10 +81,16 @@ img{
   margin-bottom: 1em;
 }
 
+#about-me {
+  margin: auto;
+  text-align: center;
+  width: 75%;
+}
+
 /* footer */
 
 footer {
   text-align: center;
-  color: rgb(83, 219, 219);
+  color: rgb(119, 119, 119);
   padding-top: 10%;
 }
