--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   background-color: rgb(255, 255, 255);
   border-radius: 15px;
   margin: 3%;
-  position: relative;
+  /* position: relative; */
 }
 
 /* nav bar */
@@ -48,9 +48,15 @@ main {
   padding-top: 5%;
 }
 
+/* #home h3 {
+  font-family: arial;
+} */
+
 .websites {
-  padding: 1em;
-  margin: 2em auto;
+
+  padding: 5em;
+  margin: auto;
+  border-bottom: 2px solid gray;
 }
 
 .websites h2 {
@@ -61,11 +67,13 @@ main {
 }
 
 .websites p {
-  font-size: 2em;
+  margin: auto;
+  font-size: 1.5em;
   text-align: center;
 }
 
-img{
+.websites img{
+  vertical-align: middle;
   width: 400px;
 }
 
@@ -82,6 +90,7 @@ img{
 }
 
 #about-me {
+  font-size: 1.5em;
   margin: auto;
   text-align: center;
   width: 75%;
