--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 /* nav bar */
 
-.name{
+.name {
   display: block;
   text-align: center;
   font-size: 3em;
@@ -53,9 +53,10 @@ main {
 } */
 
 .websites {
-
+  max-width: 50rem;
   padding: 5em;
   margin: auto;
+  margin-top: 5em;
   border-bottom: 2px solid gray;
 }
 
@@ -72,7 +73,7 @@ main {
   text-align: center;
 }
 
-.websites img{
+.websites img {
   vertical-align: middle;
   width: 400px;
 }
