--- a/style.css
+++ b/style.css
@@ -1,44 +1,51 @@
 body {
-  background-color: rgb(164, 164, 164);
-  /* text-align: center; */
+  background-color: rgb(255, 255, 255);
   font-family: helvetica;
 }
 
-.divider {
-  background-color: rgb(255, 255, 255);
-  border-radius: 15px;
-  margin: 3%;
-  /* position: relative; */
+header {
+  text-align: center;
 }
 
 /* nav bar */
 
-.name {
-  display: block;
-  text-align: center;
-  font-size: 3em;
-  padding-top: 2%;
-  color: rgb(255, 255, 255);
-  font-weight: 200;
+
+#navBar {
+  max-width: 75%;
   margin: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+
+.name {
+  text-align: center;
+  color: rgb(115, 115, 115);
 }
 
 nav {
-  margin: auto;
-  text-align: center;
-  padding-top: 1%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .active {
-  text-decoration: underline;
+  text-decoration-line: underline;
 }
 
 a {
-  text-decoration: none;
-  color: rgb(255, 255, 255);
   font-size: 2em;
-  font-weight: 600;
-  padding-left: 5%;
+  text-decoration: none;
+  color: rgb(10, 10, 10);
+  font-weight: 100;
+  font-style: oblique;
+}
+
+a:hover {
+  background-color: yellow;
 }
 
 /* main content */
@@ -48,9 +55,21 @@ main {
   padding-top: 5%;
 }
 
-/* #home h3 {
-  font-family: arial;
-} */
+#home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+/* portfolio */
 
 .websites {
   max-width: 50rem;
@@ -90,6 +109,8 @@ main {
   margin-bottom: 1em;
 }
 
+/* about me */
+
 #about-me {
   font-size: 1.5em;
   margin: auto;
@@ -100,7 +121,63 @@ main {
 /* footer */
 
 footer {
+  position: absolute;
+  bottom: 1%;
+  left: 40%;
   text-align: center;
   color: rgb(119, 119, 119);
-  padding-top: 10%;
+  /* padding-top: 10%; */
 }
+
+/* contact form */
+
+.contactForm {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  max-width: 20em;
+}
+
+input {
+  
+}
+
+textarea {
+
+}
+
+form {
+  
+  display: flex;
+  flex-direction: column;
+}
+
+/* media queries */
+
+@media screen and (max-width: 870px) {
+  #navbar {
+    flex-direction: column;
+  }
+
+  .name {
+    font-size: .75em;
+  }
+  
+  a {
+    font-size: 1.5em;
+  }
+}
+
+  @media screen and (max-width: 360px) {
+    #navbar {
+      flex-direction: column;
+    }
+
+    .name {
+      font-size: .5em;
+    }
+    
+    a {
+      font-size: 1.2em;
+    }
+  }
